Mobile layout bug fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -718,7 +718,7 @@ input, textarea {
 		display: inline; 
 	}
 	section.experience {
-		height: 950px;
+		height: 1000px;
 	}
 	.experience-line { 
 		background-position: 38px top;
